Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-27740

`tst_qquicklistview', `tst_qquickpathview', `tst_qquicktext', and `tst_qquicktextedit' fail on Mac OS X 10.7

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.4.0 Beta
    • 5.0.0
    • GUI: Text handling
    • None
    • macOS
    • 788e1b2ffa5541b86f62bf468540bb8b5872c033; 0a74379a57bcf68328ab167121c2dd16fc2d47c3 (qquicklistview)

        Testing tst_qquicktextedit
        FAIL!  : tst_qquicktextedit::boundingRect() Compared doubles are not the same (fuzzy compare)
           Actual   (edit->boundingRect().height()): 16
           Expected (line.height()): 15.2969
           Loc: [tst_qquicktextedit.cpp(3138)]
        Totals: 321 passed, 1 failed, 1 skipped
        QtQA::App::TestRunner: test failed, running again to see if it is flaky...
      
        Testing tst_qquicktext
        FAIL!  : tst_qquicktext::lineHeight() Compared doubles are not the same (fuzzy compare)
           Actual   (myText->height()): 68.8125
           Expected (qreal(qCeil(h)) * 1.5): 69
           Loc: [tst_qquicktext.cpp(1958)]
        FAIL!  : tst_qquicktext::lineLaidOutRelayout() Compared doubles are not the same (fuzzy compare)
           Actual   (r.y()): 0.109375
           Expected ((i * r.height()) - maxH): 0
           Loc: [tst_qquicktext.cpp(2529)]
        FAIL!  : tst_qquicktext::imgTagsAlign(heart-middle) 'br.y() == imgHeight / 2.0 - br.height() / 2.0' returned FALSE. ()
           Loc: [tst_qquicktext.cpp(2650)]
        FAIL!  : tst_qquicktext::imgTagsAlign(starfish-middle) 'br.y() == imgHeight / 2.0 - br.height() / 2.0' returned FALSE. ()
           Loc: [tst_qquicktext.cpp(2650)]
        FAIL!  : tst_qquicktext::fontSizeModeMultiline(styledtext) 'horizontalFitHeight > myText->height()' returned FALSE. ()
           Loc: [tst_qquicktext.cpp(3013)]
        FAIL!  : tst_qquicktext::baselineOffset(bottom align) Compared doubles are not the same (fuzzy compare)
           Actual   (item->baselineOffset()): 197.266
           Expected (baseline): 196.562
           Loc: [tst_qquicktext.cpp(3574)]
        FAIL!  : tst_qquicktext::baselineOffset(center align) Compared doubles are not the same (fuzzy compare)
           Actual   (item->baselineOffset()): 104.914
           Expected (baseline): 104.562
           Loc: [tst_qquicktext.cpp(3574)]
        FAIL!  : tst_qquicktext::baselineOffset(elided bottom align) Compared doubles are not the same (fuzzy compare)
           Actual   (item->baselineOffset()): 197.266
           Expected (baseline): 196.562
           Loc: [tst_qquicktext.cpp(3574)]
        FAIL!  : tst_qquicktext::baselineOffset(image) Compared doubles are not the same (fuzzy compare)
           Actual   (item->baselineOffset()): 178.266
           Expected (baseline): 177.562
           Loc: [tst_qquicktext.cpp(3574)]
        FAIL!  : tst_qquicktext::baselineOffset(proportional line height bottom align) Compared doubles are not the same (fuzzy compare)
           Actual   (item->baselineOffset()): 189.617
           Expected (baseline): 188.562
           Loc: [tst_qquicktext.cpp(3574)]
        Totals: 165 passed, 10 failed, 0 skipped
        Number of leaked pixmaps: 2
        QtQA::App::TestRunner: test failed, running again to see if it is flaky...
      
        Testing tst_QQuickListView
        FAIL!  : tst_QQuickListView::manualHighlight() Compared doubles are not the same (fuzzy compare)
           Actual   (listview->highlightItem()->y() - 5): 30.2969
           Expected (listview->currentItem()->y()): 30.5938
           Loc: [tst_qquicklistview.cpp(3345)]
        Totals: 457 passed, 1 failed, 1 skipped
        QtQA::App::TestRunner: test failed, running again to see if it is flaky...
      
        Testing tst_QQuickPathView
        FAIL! : tst_QQuickPathView::modelChanges() Compared doubles are not the same (fuzzy compare)
        Actual (pathView->offset()): 0
        Expected (6.0) : 6
        Loc: [tst_qquickpathview.cpp(1271)]
        Totals: 123 passed, 1 failed, 1 skipped
        QtQA::App::TestRunner: test failed, running again to see if it is flaky...
      

        For Gerrit Dashboard: QTBUG-27740
        # Subject Branch Project Status CR V

            liaqi Liang Qi
            seahumad [BB] Sergio Ahumada (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: